--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="https://adbits-design.github.io/Move29-test/">
                          <img src="assets/images/29m-rgb-logo-transparent-122x129.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="extHeader cid-s5Cb5xOeAt mbr-parallax-background" id="extHeader14-10">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="extHeader cid-s5Cb5xOeAt mbr-parallax-background" id="extHeader14-10">
     
 
     <div class="mbr-overlay" style="opacity: 0.8;">
@@ -90,7 +90,7 @@
             <div class="col-lg-6 title-col m-auto align-left">
                 <div class="text-wrap align-left">
                     <h2 class="mbr-section-title pb-4 mbr-semibold mbr-white mbr-fonts-style display-2">We are currently hiring drivers for all shifts</h2>
-                    <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">Looking for long term work in the Sonoma area? Do you have a clean driving record? Can you lift up to 50 lbs? <br><strong>Join a team that gets 100% support and great benefits.</strong></p>
+                    <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">Looking for long term work in the Sonoma area? Do you have a clean driving record? Can you lift up to 50 lbs? <br><strong>Join the 29 move team for great benefits and a support management.</strong></p>
                 </div>
             </div>
             <div class="col-lg-6 img-col">
@@ -109,10 +109,10 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-10">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-5">
-                     <p>No delivery experience required, but a great attitude and willingness to learn is required.</p><p>Must be 21 years old and have a current California driver’s license (Commercial Driver's License is not required).</p><p>Must be able to lift 50 pounds.</p><p>Ability to use GPS guided delivery devices</p><p>Practice safe driving and best practices for safe work habits.</p>
+                     <p>Join 29 move</p><p>No delivery experience required, but a great attitude and willingness to learn is required.</p><p>Must be 21 years old and have a current California driver’s license (Commercial Driver's License is not required).</p><p>Must be able to lift 50 pounds.</p><p>Ability to use GPS guided delivery devices</p><p>Practice safe driving and best practices for safe work habits.</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Full time and part time available.&nbsp;<span style="font-size: 1rem;">Work shifts will be 10 hours per day, 4 days per week for full time. We work 7 days per week and offer a variety of workday options. We are hiring for early and late morning start times.<br>Interview with the owner and receive quick decisions.</span></p><p>Pay starts at $18 per hour and up with performance bonuses available.</p><p>Uniforms provided.</p><p>Health Benefits will be available.</p><p>Paid time off.</p><p>This is considered essential work.</p><p>29 Move could be the perfect company for you if you are dependable, flexible, independent, and love the fast paced environment.</p><p>29 Move is looking for people who want to grow with a high demand business and be part of the startup growth and expansion team.</p><p>29 Move is an Equal Opportunity Employer, committed to the principle of equal employment opportunity for all employees and to providing a work environment free of discrimination and harassment.  Our employment decisions are based on business needs, position requirements, and how and individual fits current openings.  Employment decisions applied without discrimination on the basis of race, color, religion, sexual orientation, gender identity, marital status, age, disability, national or ethnic origin, military service status, or any other protected characteristic.  We are committed to a safe, harassment free, open communication workplace.</p><p><a href="index.html#extForm15-u" class="text-info"><strong>Make the move to 29 Move and join our team today.&nbsp;</strong></a></p>
+                     <p>Full time and part time available.&nbsp;<span style="font-size: 1rem;">Work shifts will be 10 hours per day, 4 days per week for full time. We work 7 days per week and offer a variety of workday options. We are hiring for early and late morning start times.<br>Interview with the owner and receive quick decisions.</span></p><p>Pay starts at $18 per hour and up with performance bonuses available.</p><p>Uniforms provided.</p><p>Health Benefits will be available.</p><p>Paid time off.</p><p>This is considered essential work.</p><p>29 move could be the perfect company for you if you are dependable, flexible, independent, and love the fast paced environment.</p><p>29 move is looking for people who want to grow with a high demand business and be part of the startup growth and expansion team.</p><p>29 move is an Equal Opportunity Employer, committed to the principle of equal employment opportunity for all employees and to providing a work environment free of discrimination and harassment.  Our employment decisions are based on business needs, position requirements, and how and individual fits current openings.  Employment decisions applied without discrimination on the basis of race, color, religion, sexual orientation, gender identity, marital status, age, disability, national or ethnic origin, military service status, or any other protected characteristic.  We are committed to a safe, harassment free, open communication workplace.</p><p><a href="index.html#extForm15-u" class="text-info"><strong>Make the move to 29 m</strong></a><a href="index.html#extForm15-u" class="text-info"><strong>ove and join our team today.&nbsp;</strong></a></p>
                 </div>
                 
             </div>
@@ -127,10 +127,10 @@
         <div class="row">
             <div class="col-lg-6 mx-auto py-5 mbr-form" data-form-type="formoid">
                 <h2 class="mbr-section-title align-left pb-4 mbr-semibold mbr-white mbr-fonts-style display-2">Apply for a Job<br>or Contact Us</h2>
-                <p class="mbr-text mbr-black align-left pb-4 mbr-regular mbr-light mbr-fonts-style display-4">Fill in the form. Please let us know if you are looking for a job, and we will send you an application form.</p>
+                <p class="mbr-text mbr-black align-left pb-4 mbr-regular mbr-light mbr-fonts-style display-4">Fill in the form to get in touch with us at 29 move. Please let us know if you are looking for a job, and we will send you an application form.</p>
 
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kFcMYsfXEkcEq6K8AIWzTJaQipHrjpUfakQQHCaZ18Rho3DR/iBGg4PpXmkZqYSMCIa3nzNL2g0qqeKpWDL0XlXIj50zLccsv5TmxUNaVWqtyb1eYe13aSPYvE6JjlAI.inTV0MiC9IMzFr5Cm6TwNK31Gy/A5E0MLskit1nECJmn+OzzYyTTzygrg0Waemz8SIZIrss0GHnW3FBBZWX7WoY+wI2iPpc1UHUWeI+itxhCJxrGzTI9S3wu8g7N0aHr">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="iPQH7Awahusy+EzRwhwWiBKQNmYVxBnPgsKaEmgScvTst8NUvP1VVULN1disEBo3FfqGFcmRjpTxgsUsjizEicCEyhXrw25N/7bK3e4vTlzgKoGEg/nrX9q1yVOrNF9g.o6dsebvHyv7sjNv9UmJG2yOUJbErRLnjPeIk88IAcxMlp+VFupEcpCAwX/W5H+kHouthGxguWmbUJ4Uz0NYRW2hYC4LlQnkOK+zO4VmWCfOp69EMSqQFSopO2ZWb++Tw">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for reaching out. We will respond within 24 hours.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -177,7 +177,7 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.co/">
+                    <a href="https://adbits-design.github.io/Move29-test/">
                         <img src="assets/images/29m-rgb-logo-transparent-192x203.png" alt="Mobirise" title="">
                     </a>
                 </div>
